<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="home"
            type="com.example.antitheft4car.ui.video.VideoFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/t1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/txtDate"
            android:layout_width="34dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <TextView
            android:id="@+id/date"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/eg"
            android:textSize="@dimen/input_text_size"
            app:layout_constraintStart_toEndOf="@+id/txtDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/t2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageButton
            android:id="@+id/timePicker"
            android:layout_width="32dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/txtDate"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

        <TextView
            android:id="@+id/timeView"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/eg2"
            android:textSize="@dimen/input_text_size"
            app:layout_constraintStart_toEndOf="@+id/timePicker"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="150dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeView" />

        <TextView
            android:id="@+id/image_id"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:textAlignment="center"
            android:textSize="@dimen/input_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeView" />

        <ImageView
            android:id="@+id/image_show"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_id" />

        <TextView
            android:id="@+id/no_image"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="10dp"
            android:text="@string/nope"
            android:textAlignment="center"
            android:textSize="@dimen/no_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_list"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeView"/>

        <Button
            android:id="@+id/btnOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="@dimen/btn_left_right"
            android:paddingTop="@dimen/btn_top_btm"
            android:paddingRight="@dimen/btn_left_right"
            android:paddingBottom="@dimen/btn_top_btm"
            android:text="@string/btn_on"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="88dp"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="@dimen/btn_left_right"
            android:paddingTop="@dimen/btn_top_btm"
            android:paddingRight="@dimen/btn_left_right"
            android:paddingBottom="@dimen/btn_top_btm"
            android:text="@string/btn_search"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>